--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <script id="stripe-js" src="https://js.stripe.com/v3/" async></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
