--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700,900"
       rel="stylesheet"
     />
     <link
